--- a/index.html
+++ b/index.html
@@ -67,23 +67,15 @@
             <p class="mt-2 text-slate-600 font-semibold">Loading live data...</p>
         </div>
     </div>
-
-    <div class="container mx-auto p-4 sm:p-6 lg:p-8">
-        <header class="text-center mb-8">
-            <h1 class="text-3xl md:text-4xl font-bold text-slate-900">Weekly Financial Report</h1>
-            <p id="report-date" class="text-slate-500 mt-2">For the week ending August 22, 2025</p>
-        </header>
-
-        <div 
+    
     id="welcome-banner" 
     class="relative rounded-xl shadow-md mb-8 overflow-hidden text-center" 
-    style="background-image: url('./images/banner1.jpg'); background-size: cover; background-position: center; min-height: 220px;"
+    style="background-image: url('./images/banner2.jpg'); background-size: cover; background-position: center; min-height: 220px;"
 >
     <div class="absolute inset-0 bg-slate-900/50"></div>
 
     <div class="relative z-10 flex flex-col items-center justify-center h-full p-6 text-white" style="min-height: 220px;">
-        <h2 class="text-3xl font-bold">Welcome to Your Financial Dashboard</h2>
-        <p class="mt-2 text-slate-200 max-w-xl">All your key financial metrics, updated weekly.</p>
+        <h2 class="text-3xl font-bold">Financial Dashboard</h2>
     </div>
 </div>
 
@@ -430,3 +422,4 @@
 </body>
 
 </html>
+
