--- a/index.html
+++ b/index.html
@@ -72,20 +72,8 @@
     <div class="container mx-auto p-4 sm:p-6 lg:p-8">
 
         <header class="text-center mb-8">
-            <h1 class="text-3xl md:text-4xl font-bold text-slate-900">Weekly Financial Report</h1>
-            <p id="report-date" class="text-slate-500 mt-2">For the week ending August 24, 2025</p>
+            <h1 class="text-3xl md:text-4xl font-bold text-slate-900">Financial Dashboard</h1>
         </header>
-
-        <div 
-            id="welcome-banner" 
-            class="relative rounded-xl shadow-md mb-8 overflow-hidden text-center" 
-            style="background-image: url('./images/banner2.jpg'); background-size: cover; background-position: center; min-height: 220px;"
-        >
-            <div class="absolute inset-0 bg-slate-900/50"></div>
-            <div class="relative z-10 flex flex-col items-center justify-center h-full p-6 text-white" style="min-height: 220px;">
-                <h2 class="text-3xl font-bold">Financial Dashboard</h2>
-            </div>
-        </div>
 
         <nav class="flex justify-center items-center bg-white/60 backdrop-blur-sm rounded-full shadow-sm p-2 mb-8 sticky top-4 z-10 max-w-md mx-auto">
             <button id="btn-portfolio" class="nav-btn active flex-1 text-center py-2 px-4 rounded-full text-slate-600 font-semibold">Portfolio</button>
@@ -418,3 +406,4 @@
     </script>
 </body>
 </html>
+
