--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation@3.0.1/dist/chartjs-plugin-annotation.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     
     <style>
@@ -71,10 +71,17 @@
 
     <div class="container mx-auto p-4 sm:p-6 lg:p-8">
 
-        <header class="text-center mb-8">
-            <h1 class="text-3xl md:text-4xl font-bold text-slate-900">Financial Dashboard</h1>
-        </header>
-
+        <div 
+            id="welcome-banner" 
+            class="relative rounded-xl shadow-md mb-8 overflow-hidden text-center" 
+            style="background-image: url('./images/banner1.jpg'); background-size: cover; background-position: center; min-height: 200px;"
+        >
+            <div class="absolute inset-0 bg-slate-900/50"></div>
+            <div class="relative z-10 flex flex-col items-center justify-center h-full p-6 text-white" style="min-height: 200px;">
+                <h1 class="text-4xl font-bold">Financial Dashboard</h1>
+                <p id="report-date" class="mt-2 text-slate-200"></p>
+            </div>
+        </div>
         <nav class="flex justify-center items-center bg-white/60 backdrop-blur-sm rounded-full shadow-sm p-2 mb-8 sticky top-4 z-10 max-w-md mx-auto">
             <button id="btn-portfolio" class="nav-btn active flex-1 text-center py-2 px-4 rounded-full text-slate-600 font-semibold">Portfolio</button>
             <button id="btn-economy" class="nav-btn flex-1 text-center py-2 px-4 rounded-full text-slate-600 font-semibold">Economy</button>
@@ -231,6 +238,7 @@
             }
 
             async function initDashboard() {
+                // This code no longer causes an error because the 'report-date' element exists in the new banner.
                 const reportDateElement = document.getElementById('report-date');
                 const today = new Date();
                 const dayOfWeek = today.getDay();
@@ -406,4 +414,3 @@
     </script>
 </body>
 </html>
-
