--- a/index.html
+++ b/index.html
@@ -71,15 +71,10 @@
 
     <div class="container mx-auto p-4 sm:p-6 lg:p-8">
 
-        <div 
-            id="welcome-banner" 
-            class="relative rounded-xl shadow-md mb-8 overflow-hidden text-center" 
-            style="background-image: url('./images/banner1.jpg'); background-size: cover; background-position: center 25%; min-height: 200px;"
-        >
-            <div class="absolute inset-0 bg-slate-900/50"></div>
-            <div class="relative z-10 h-full" style="min-height: 200px;"></div>
-        </div>
-
+        <header class="text-center bg-slate-800 text-white p-10 rounded-xl shadow-md mb-8">
+            <h1 class="text-4xl md:text-5xl font-bold">Financial Dashboard</h1>
+            <p id="report-date" class="text-slate-300 mt-2"></p>
+        </header>
         <nav class="flex justify-center items-center bg-white/60 backdrop-blur-sm rounded-full shadow-sm p-2 mb-8 sticky top-4 z-10 max-w-md mx-auto">
             <button id="btn-portfolio" class="nav-btn active flex-1 text-center py-2 px-4 rounded-full text-slate-600 font-semibold">Portfolio</button>
             <button id="btn-economy" class="nav-btn flex-1 text-center py-2 px-4 rounded-full text-slate-600 font-semibold">Economy</button>
@@ -237,8 +232,14 @@
 
             async function initDashboard() {
                 // ## START OF JAVASCRIPT CHANGE ##
-                // The code that tried to find and update the 'report-date' element has been removed.
-                const today = new Date();
+                // This code has been restored to dynamically update the date in the new banner.
+                const reportDateElement = document.getElementById('report-date');
+                const today = new Date(); // Sunday, August 24, 2025
+                const dayOfWeek = today.getDay(); // Sunday is 0
+                const daysToLastFriday = (dayOfWeek + 2) % 7; // (0 + 2) % 7 = 2
+                const lastFriday = new Date();
+                lastFriday.setDate(today.getDate() - daysToLastFriday); // 24 - 2 = 22nd
+                reportDateElement.textContent = `For the week ending ${lastFriday.toLocaleDateString('en-US', { year: 'numeric', month: 'long', day: 'numeric' })}`;
                 // ## END OF JAVASCRIPT CHANGE ##
 
                 // Update dynamic date fields
