--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <header class="text-center bg-slate-800 text-white p-10 rounded-xl shadow-md mb-8">
             <h1 class="text-4xl md:text-5xl font-bold">Financial Dashboard</h1>
         </header>
-        <nav class="flex justify-center items-center bg-white/60 backdrop-blur-sm rounded-full shadow-sm p-2 mb-8 sticky top-4 z-10 max-w-2xl mx-auto">
+        <nav class="grid grid-cols-2 md:flex gap-2 bg-white/60 backdrop-blur-sm rounded-2xl md:rounded-full shadow-sm p-2 mb-8 sticky top-4 z-10 max-w-xs md:max-w-2xl mx-auto">
             <button id="btn-portfolio" class="nav-btn active flex-1 text-center py-2 px-4 rounded-full text-slate-600 font-semibold">Portfolio</button>
             <button id="btn-economy" class="nav-btn flex-1 text-center py-2 px-4 rounded-full text-slate-600 font-semibold">Economy</button>
             <button id="btn-bonds" class="nav-btn flex-1 text-center py-2 px-4 rounded-full text-slate-600 font-semibold">Cash & Bonds</button>
@@ -578,3 +578,4 @@
     </script>
 </body>
 </html>
+
